--- a/src/views/note.ejs
+++ b/src/views/note.ejs
@@ -18,18 +18,26 @@
 </head>
 
 <body>
-<div class="hero bg-base-200 min-h-screen">
-  <div class="card card-bordered bg-base-100 w-120">
-      <div class="card-body card-bordered">
+<div class="hero bg-base-300 min-h-screen">
+  <div class="card card-border border-base-200 shadow-2xl bg-base-100 w-120">
+      <div class="card-body card-border">
         <div class="badgeDiv"> 
-          <div class="badge badge-outline badge-warning">priority</div>
-          <div class="badge badge-outline badge-error">expiring in 1d</div>
+          <div class="badge badge-outline badge-error">important</div>
         </div>
             <h2 class="text-2xl font-bold py-2"><%= note.title %></h2> 
        <img id="noteImage" src="" width="auto" height="auto" style="max-height: 480px; max-width: 480px;">  
         <h2 class="text-s py-2 text-wrap multiline"><%= note.content %> </h2>
         <div class="buttonHolder"> 
-          <button class="btn btn-primary" id="copyClipboard" type="submit" onClick="copyToClipboard('<%= note.content %>')">Copy Content to Clipboard</button>
+          <button class="btn btn-primary btn-sm" id="copyClipboard" type="submit" onClick="copyToClipboard('<%= note.content %>')">Copy Content</button>
+          <button class="btn btn-primary btn-sm" id="copyClipboardImg" type="submit" onClick="copyToClipboardImg('<%= note.file %>')">Copy Image</button>
+        </div>
+  
+        <br>
+        <div class="breadcrumbs text-xs">
+          <ul>
+            <li><a href="https://myshare.haydar.dev/dashboard.html">Dashboard</a></li>
+          </ul>
+          <h2 class="text-xs">Uploaded by UID <%= note.userId %></h2> 
         </div>
       </div>
     </div>
@@ -45,6 +53,14 @@
     });
   }
 
+  function copyToClipboardImg(content) {
+    navigator.clipboard.write(content).then(() => {
+      alert("Content copied to clipboard!");
+    }).catch(err => {
+      console.error("Error copying image: ", err);
+    });
+  }
+
   function updateImage()  {
     var image = document.getElementById("noteImage");
     image.src = `<%= note.file %>`;
@@ -56,8 +72,10 @@
 
   function imageNotFound() {
     var image = document.getElementById("noteImage");
+    var imagecopy = document.getElementById("copyClipboardImg");
     console.log('The image failed to load, removing from document...');
     image.className = "hidden";
+    imagecopy.className = "hidden";
   }
 
   updateImage();
